--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,6 +1,7 @@
 .navbar {
 	padding: 0.5rem;
-	min-width: 75%;
+	/* min-width: 75%; */
+	width: 100%;
 
 	display: flex;
 	flex-direction: row;
@@ -12,15 +13,19 @@
 	font-weight: 500;
 	background-image: url('../../public/rust2.jpeg');
 	border-top: 2.5px solid var(--clr-white);
+
+	animation: slide 1s ease;
 }
 
 .navbar > .log {
-	padding: 0.5rem;
+	padding: 1rem;
 	min-height: 100px;
 	min-width: 75%;
 
-	background: var(--clr-black);
+	display: flex;
+	align-items: flex-end;
 
+	background: var(--clr-black);
 	color: green;
 	border: 2.5px solid var(--clr-white);
 	border-radius: 0.25rem;
@@ -36,13 +41,22 @@
 	padding: 0.5rem;
 
 	cursor: pointer;
-	color: var(--clr-white);
+	color: var(--clr-yellow);
 	background: var(--clr-black);
 	border: 2.5px solid var(--clr-white);
 	border-radius: 0.25rem;
 }
 
 .navbar .button:hover {
-	color: white;
-	border-color: white;
+	/* color: white; */
+	border-color: var(--clr-yellow);
+}
+
+@keyframes slide {
+	0% {
+		max-height: 0px;
+	}
+	100% {
+		max-height: 200px;
+	}
 }
